--- a/index.html
+++ b/index.html
@@ -4,10 +4,18 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>HTML 5 Boilerplate</title>
+    <title>superawesomemegaserverfor</title>
     <link rel="stylesheet" href="style.css">
+    <link rel="icon" href="favicon.ico">
   </head>
   <body>
+
+  <div class="topnav">
+    <a class="active" href="index.html">Home</a>
+    <a href="serverlist.html">Servers</a>
+  </div>
+
 	<script src="index.js"></script>
+
   </body>
 </html>
